--- a/SocialRadar/SocialRadar/Base.lproj/Main.storyboard
+++ b/SocialRadar/SocialRadar/Base.lproj/Main.storyboard
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="RwB-uz-5ZX">
     <dependencies>
-        <deployment defaultVersion="1808" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
     </dependencies>
     <scenes>
@@ -135,6 +134,7 @@
                         <barButtonItem title="Item" id="oBF-Cv-9aG"/>
                         <barButtonItem title="Item" id="9uY-Jl-raw"/>
                     </toolbarItems>
+                    <navigationItem key="navigationItem" id="FA8-zM-A3N"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="txtConfirmPassword" destination="Jmh-pf-QbY" id="lJz-0z-MOx"/>
@@ -144,7 +144,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8i5-ed-Yi5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="919" y="550"/>
+            <point key="canvasLocation" x="919" y="670"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="Z9K-je-lx0">
@@ -240,6 +240,9 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="T6a-0e-Nfh"/>
+                    <connections>
+                        <segue destination="qam-g3-jdp" kind="push" identifier="goto_signup" id="0yM-xV-wIb"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9J0-fJ-gvj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -309,7 +312,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3Ey-co-2kX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1419" y="158"/>
+            <point key="canvasLocation" x="1435" y="-62"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
@@ -319,5 +322,6 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="lzu-FC-dRm"/>
+        <segue reference="0yM-xV-wIb"/>
     </inferredMetricsTieBreakers>
 </document>
