--- a/SocialRadar/SocialRadar/Base.lproj/Main.storyboard
+++ b/SocialRadar/SocialRadar/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6245" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="RwB-uz-5ZX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="RwB-uz-5ZX">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6238"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
     </dependencies>
     <scenes>
         <!--Home-->
@@ -241,6 +242,7 @@
                     </tableView>
                     <navigationItem key="navigationItem" id="T6a-0e-Nfh"/>
                     <connections>
+                        <outlet property="appsTableView" destination="og8-Sw-e1b" id="KxY-Ag-QTi"/>
                         <segue destination="qam-g3-jdp" kind="push" identifier="goto_signup" id="0yM-xV-wIb"/>
                     </connections>
                 </tableViewController>
@@ -321,7 +323,7 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="lzu-FC-dRm"/>
         <segue reference="0yM-xV-wIb"/>
+        <segue reference="lzu-FC-dRm"/>
     </inferredMetricsTieBreakers>
 </document>
