Load all questions at QuestionTableViewController and fix complie error

--- a/SocialRadar/SocialRadar/Base.lproj/Main.storyboard
+++ b/SocialRadar/SocialRadar/Base.lproj/Main.storyboard
@@ -327,7 +327,7 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="Q1G-Oe-dCG"/>
+        <segue reference="0yM-xV-wIb"/>
         <segue reference="WIS-dy-SHh"/>
     </inferredMetricsTieBreakers>
 </document>
