--- a/SocialRadar/SocialRadar/Base.lproj/LaunchScreen.xib
+++ b/SocialRadar/SocialRadar/Base.lproj/LaunchScreen.xib
@@ -24,19 +24,38 @@
                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="Agz-Ek-0yM">
+                    <rect key="frame" x="125" y="211" width="230" height="175"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="175" id="3EG-aB-kWC"/>
+                        <constraint firstAttribute="width" constant="230" id="JX5-T3-cV3"/>
+                    </constraints>
+                </imageView>
             </subviews>
             <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="kId-c2-rCX" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="bottom" multiplier="1/3" constant="1" id="5cJ-9S-tgC"/>
+                <constraint firstItem="Agz-Ek-0yM" firstAttribute="top" secondItem="kId-c2-rCX" secondAttribute="bottom" constant="28" id="8YA-Br-0fH"/>
                 <constraint firstAttribute="centerX" secondItem="kId-c2-rCX" secondAttribute="centerX" id="Koa-jz-hwk"/>
                 <constraint firstAttribute="bottom" secondItem="8ie-xW-0ye" secondAttribute="bottom" constant="20" id="Kzo-t9-V3l"/>
                 <constraint firstItem="8ie-xW-0ye" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="MfP-vx-nX0"/>
                 <constraint firstAttribute="centerX" secondItem="8ie-xW-0ye" secondAttribute="centerX" id="ZEH-qu-HZ9"/>
+                <constraint firstItem="8ie-xW-0ye" firstAttribute="top" secondItem="Agz-Ek-0yM" secondAttribute="bottom" constant="53" id="aqr-Dc-3VF"/>
+                <constraint firstAttribute="centerY" relation="lessThanOrEqual" secondItem="Agz-Ek-0yM" secondAttribute="centerY" constant="40" id="cVr-gt-sWi"/>
                 <constraint firstItem="kId-c2-rCX" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="fvb-Df-36g"/>
+                <constraint firstAttribute="centerX" secondItem="Agz-Ek-0yM" secondAttribute="centerX" id="hIW-Nt-Brr"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="cVr-gt-sWi"/>
+                </mask>
+            </variation>
             <point key="canvasLocation" x="548" y="455"/>
         </view>
     </objects>
+    <resources>
+        <image name="Logo" width="144" height="144"/>
+    </resources>
 </document>
